Fix: align icon with text

--- a/webapp/src/css/targets.less
+++ b/webapp/src/css/targets.less
@@ -24,7 +24,7 @@
       border-bottom-right-radius: @radius-size-medium;
       border-top: 1px solid @gray-light;
       .title {
-        margin-left: 10px;
+        margin: 10px 0 10px 10px;
         h2 {
           margin: 0;
           color: @gray-ultra-dark;
@@ -36,6 +36,7 @@
           color: @gray-dark;
           font-size: @font-small;
           font-weight: 400px;
+          margin: 0;
         }
       }
       .icon {
@@ -43,8 +44,8 @@
         align-self: center;
         img,
         svg {
-          width: 35px;
-          height: 35px;
+          width: 33px;
+          height: 31px;
         }
       }
     }
